# etherealchess

./: AUTHORS  Makefile.am  configure.ac  options.ini
Data/: help.txt
Data/Models/Fancy/queen/: queen.mtl
src/: EtherealChess.sln  EtherealChess.vcxproj  EtherealChess.vcxproj.filters  Makefile.am  WGL_ARB_multisample.h  ai.cpp  ai.h  arcane_lib.cpp  arcane_lib.h  cam.cpp  cam.h  config.cpp  config.h  dialog.cpp  dialog.h  font.cpp  font.h  game.cpp  game.h  gl.cpp  gl.h  graphics.cpp  graphics.h  input.cpp  input.h  main.cpp  mathlib.cpp  mathlib.h  menu.cpp  menu.h  model.cpp  model.h  particle.cpp  particle.h  resource.aps  resource.h  resource.rc  shader.cpp  shader.h  sound.cpp  (+3 more)
