bin_PROGRAMS = etherealchess

etherealchess_SOURCES =	ai.cpp \
			arcane_lib.cpp \
			cam.cpp \
			config.cpp \
			dialog.cpp \
			font.cpp \
			game.cpp \
			GL_ARB_multitexture.cpp \
			gl.cpp \
			graphics.cpp \
			input.cpp \
			main.cpp \
			mathlib.cpp \
			menu.cpp \
			model.cpp \
			particle.cpp \
			shader.cpp \
			sound.cpp \
			texFont.cpp \
			WGL_ARB_multisample.cpp

#INCLUDES = -DPREFIX_DIR=\"$(bcdatadir)\" \
#	  -DMODELS_DIR=\"$(modelsdir)\" \
#	  -DART_DIR=\"$(artdir)\" \
#	  -DFONTS_DIR=\"$(fontsdir)\"
